[package]
name = "ckb-vm-debug-utils"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"
autobins = false

[[bin]]
name = "baremetal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bytes = "0.4.12"
ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm", rev = "44adc76" }
env_logger = "0.4.3"
gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol", rev = "565ab0c" }
log = "0.4.0"
nix = "0.15.0"
