[package]
name = "ckb-vm-debug-utils"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"
autobins = false

[[bin]]
name = "baremetal"
path = "src/main.rs"

[features]
default = []
stdio = ["libc", "nix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bytes = "1.0.0"
ckb-vm = { version = "0.21.3" }
env_logger = "0.4.3"
gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol", rev = "565ab0c" }
libc = { version = "0.2.47", optional = true }
log = "0.4.0"
nix = { version = "0.15.0", optional = true }
